# mymlproject

./: .flake8  Dockerfile  README.md  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: streamlit_app.py
config/: config.yaml
generic-ml-template/: .gitignore  README.md  SKILLS.md  pytest.ini  requirements.txt  setup.py  test_results.txt
generic-ml-template/app/: __init__.py  streamlit_app.py
generic-ml-template/configs/: housing_regression.yaml  iris_classification.yaml  titanic_with_tracking.yaml
generic-ml-template/src/: __init__.py
generic-ml-template/tests/: __init__.py  conftest.py  test_config_loader.py  test_configure_model_page.py  test_data_widgets.py  test_engineer.py  test_equation_extractor.py  test_evaluator.py  test_explore_data_page.py  test_explorer.py  test_loader.py  test_mlflow_tracker.py  test_model_defaults.py  test_model_widgets.py  test_optuna_tuner.py  test_preprocessor.py  test_results_page.py  test_results_widgets.py  test_session_state.py  test_train_model_page.py  test_trainer.py  test_upload_data_page.py  test_validator.py  test_visualizations.py
models/: production_metadata.json
spotify-recsys/: .dockerignore  .env.example  .gitignore  CI_CD.md  DOCKER.md  README.md  TESTING.md  docker-compose.yml  mlflow.db  requirements.txt  setup.py
spotify-recsys/app/: __init__.py  streamlit_app.py
spotify-recsys/models/: best_params.json  collaborative_filtering_20260430_002454_metadata.json  content_based_20260430_002453_metadata.json
tests/: __init__.py  conftest.py  test_model.py
(+59 files in other folders)
